--- a/harzident/style.css
+++ b/harzident/style.css
@@ -1,3 +1,7 @@
+.game {
+    text-align: center;
+}
+
 #bb {
   padding: 100px;
   background-color: #00F;
@@ -30,6 +34,7 @@ body {
     margin: auto;
     padding: 20px;
     font-family: "Roboto", serif;
+    text-align: justify;
 }
 
 #rightmessage {
